sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:3: error: not found: value ecart
  ecart = getNombreValeurs() / 2
  ^AlgShellSort:4: error: not found: value ecart
  while (ecart > 0) {
         ^AlgShellSort:5: error: not found: value ecart
    for (i <- ecart - 1 to getNombreValeurs() - 1) {
              ^AlgShellSort:9: error: not found: value ecart
      while (j >= ecart && getValeur(j - ecart) > v) {
                  ^AlgShellSort:9: error: not found: value ecart
      while (j >= ecart && getValeur(j - ecart) > v) {
                                         ^AlgShellSort:10: error: not found: value ecart
        copie(j - ecart, j)
                  ^AlgShellSort:11: error: not found: value ecart
        j -= ecart
             ^AlgShellSort:15: error: not found: value ecart
    ecart = ecart / 2
    ^